Use Java 11 javadoc.